Adicionando Testes Unitátios no Server-Side e mudanças no templete/clientes.html

--- a/core/templates/clientes.html
+++ b/core/templates/clientes.html
@@ -15,7 +15,7 @@
                   <h3><a href="#">Creative Head</a></h3>
                 </div>
                 <div class="content">
-                  <p class="description">Praesent cursus nulla non arcu tempor, ut egestas elit tempus. In ac ex fermentum, gravida felis nec, tincidunt ligula.</p>
+                  <p class="description">Ótimas features, está nos ajudando muito no dia-a-dia da organização, serviço sempre disponível, nossos colaboradores adoraram.</p>
                   <div class="star-icon mt-3">
                     <span><i class="lni-star-filled"></i></span>
                     <span><i class="lni-star-filled"></i></span>
@@ -32,11 +32,11 @@
                   <img src="{% static 'img/testimonial/img2.jpg' %}" alt="">
                 </div>
                 <div class="info">
-                  <h2><a href="#">Domeni GEsson</a></h2>
+                  <h2><a href="#">Domeni Gesson</a></h2>
                   <h3><a href="#">Awesome Technology co.</a></h3>
                 </div>
                 <div class="content">
-                  <p class="description">Praesent cursus nulla non arcu tempor, ut egestas elit tempus. In ac ex fermentum, gravida felis nec, tincidunt ligula.</p>
+                  <p class="description">Durante a implantação tive alguns problemas, contudo, conseguimos reverter junto com a equipe de suporte, ainda estamos em fases de testes.</p>
                   <div class="star-icon mt-3">
                     <span><i class="lni-star-filled"></i></span>
                     <span><i class="lni-star-filled"></i></span>
@@ -57,13 +57,13 @@
                   <h3><a href="#">Nesnal Design co.</a></h3>
                 </div>
                 <div class="content">
-                  <p class="description">Praesent cursus nulla non arcu tempor, ut egestas elit tempus. In ac ex fermentum, gravida felis nec, tincidunt ligula.</p>
+                  <p class="description">Super indicamos a Fusion, pois conseguiram aderir seu sistema e funcionalidades para os vários setores de atuação da nossa empresa.</p>
                   <div class="star-icon mt-3">
                     <span><i class="lni-star-filled"></i></span>
                     <span><i class="lni-star-filled"></i></span>
                     <span><i class="lni-star-filled"></i></span>
                     <span><i class="lni-star-filled"></i></span>
-                    <span><i class="lni-star-half"></i></span>
+                    <span><i class="lni-star-filled"></i></span>
                   </div>
                 </div>
               </div>
@@ -78,7 +78,7 @@
                   <h3><a href="#">Developer</a></h3>
                 </div>
                 <div class="content">
-                  <p class="description">Praesent cursus nulla non arcu tempor, ut egestas elit tempus. In ac ex fermentum, gravida felis nec, tincidunt ligula.</p>
+                  <p class="description">Tenho utilizado nos ultimos 3 meses, tenho gostado muito, tanto das funcionalidades quanto do suporte que está lá sempre que preciso.</p>
                   <div class="star-icon mt-3">
                     <span><i class="lni-star-filled"></i></span>
                     <span><i class="lni-star-filled"></i></span>
