Mudanças no templete/clientes.html

--- a/core/templates/clientes.html
+++ b/core/templates/clientes.html
@@ -82,9 +82,9 @@
                   <div class="star-icon mt-3">
                     <span><i class="lni-star-filled"></i></span>
                     <span><i class="lni-star-filled"></i></span>
-                    <span><i class="lni-star-half"></i></span>
-                    <span><i class="lni-star-half"></i></span>
-                    <span><i class="lni-star-half"></i></span>
+                    <span><i class="lni-star-filled"></i></span>
+                    <span><i class="lni-star-filled"></i></span>
+                    <span><i class="lni-star-filled"></i></span>
                   </div>
                 </div>
               </div>
